# ai-chatbot-meetings

./: .env.template  README.md  pyproject.toml
docs/: Architecture.md  Bugs.md  TODO.md
src/: streamlit_app.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  calcom_service.py  chat_history.py  chat_model.py  tool_manager.py
src/utils/: __init__.py  logger.py  utils.py
tests/: test_calcom_service.py  test_chat_history.py  test_chat_model.py
